--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # Production Environment Variables
-# IMPORTANT: Replace YOUR_BACKEND_URL with your actual deployed backend URL
-VITE_API_URL=YOUR_BACKEND_URL
+# This file is for reference - actual env vars are set in Vercel Dashboard
+VITE_API_URL=https://taskflow-backend-phi.vercel.app/api
